[package]
name = "rust2"
version = "0.1.0"
authors = ["Daniel.Luo <249553722@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
reqwest = "0.10.8"
tokio = "0.2.22"

[[bin]]
name = "rust2"
path = "main.rs"

